# opendoist

./: .dockerignore  .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  biome.json  cliff.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.changeset/: README.md  opendoist-cli-initial.md  opentask-cli-initial.md
.github/workflows/: ci.yml  desktop-release.yml  docker.yml  prepare-release.yml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  reminders.rs  updater.rs
apps/server/: drizzle.config.ts  package.json  vitest.config.ts
apps/server/drizzle/: 0000_moaning_tyrannus.sql  0001_fts5.sql  0002_cool_giant_girl.sql  0003_right_spectrum.sql  0004_large_squadron_supreme.sql  0005_phase9_data.sql  0006_deadline_time.sql
apps/server/src/: app.ts  auth.test.ts  auth.ts  boot.test.ts  config.test.ts  config.ts  index.ts  logger.ts  secrets.test.ts  secrets.ts  seed.ts
apps/web/: components.json  index.html  package.json  playwright.config.ts  playwright.prod.config.ts  quickadd.html  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/e2e/: a11y.spec.ts  (+22 more)
assets/brand/: ATTRIBUTION.md
deploy/: .env.example  docker-compose.yml
docs/: README.md  api.md  backups.md  cli.md  configuration.md  faq.md  import-todoist.md  install.md  voice-ramble.md
scripts/: capture-screenshots.mjs  check-bundle.mjs  generate-icons.mjs  smoke-docker.sh
(+432 files in other folders)
