[package]
name = "opentask-desktop"
version = "0.1.0"
description = "OpenTask macOS desktop app (Tauri 2): the web SPA in a native shell plus a menu-bar Quick Add popover, native reminder notifications, autostart, and a minisign self-updater."
authors = ["OpenTask contributors"]
license = "MIT"
repository = "https://github.com/Pranav-Karra-3301/opentask"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Keep each plugin crate's minor in lockstep with its JS binding in the root pnpm catalog
# (verified pin set, July 2026).
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-single-instance = "2.4"
tauri-plugin-positioner = { version = "2.3", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-notification = "2.3"
tauri-plugin-store = "2.4"
tauri-plugin-autostart = "2.5"
tauri-plugin-http = "2.5"
tauri-plugin-updater = "2.10"
tauri-plugin-process = "2"
